# quillmq

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
docs/: ARCHITECTURE.md
examples/: README.md  demo_all.py  producer.py  pubsub_publisher.py  pubsub_subscriber.py  rpc_client.py  rpc_server.py  tls_client.py  worker.py
src/quillmq/: __init__.py  broker.py  cli.py  client.py  exchange.py  logging_config.py  metrics.py  protocol.py  queue.py  rpc.py  server.py  store.py
tests/: test_broker.py  test_cli.py  test_client.py  test_examples.py  test_exchange.py  test_metrics.py  test_package.py  test_protocol.py  test_queue.py  test_reliability.py  test_resilience.py  test_rpc.py  test_server.py  test_store.py  test_tls.py
tests/integration/: test_e2e.py
